--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,4 +24,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          tags: mostlydevops/wordsmith-web:latest
+          tags: ghcr.io/mostlydevops/wordsmith-web:latest
