--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,9 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -25,3 +28,5 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/mostlydevops/wordsmith-web:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
