add qemu and arm64

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,10 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+  
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
@@ -30,3 +34,4 @@ jobs:
           tags: ghcr.io/mostlydevops/wordsmith-web:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
