--- a/.github/workflows/call-docker-build-promote.yaml
+++ b/.github/workflows/call-docker-build-promote.yaml
@@ -74,7 +74,7 @@ jobs:
     needs: docker-build-merge
     uses: mostlydevops/actions/.github/workflows/reusable-gitops-pr.yaml@main
     secrets:
-      github-token: ${{ secrets.GITOPS_TOKEN }}
+      github-token: ${{ secrets.GITOPS_WORDSMITH_K8S }}
     with:
       repo: mostlydevops/wordsmith-k8s
       kustomize-path: environments/staging
