--- a/.github/workflows/call-docker-build-promote.yaml
+++ b/.github/workflows/call-docker-build-promote.yaml
@@ -77,6 +77,6 @@ jobs:
       github-token: ${{ secrets.GITOPS_WORDSMITH_K8S }}
     with:
       repo: mostlydevops/wordsmith-k8s
-      kustomize-path: environments/staging
+      kustomize-path: environments/production
       image: ghcr.io/${{ github.repository }}-stable
       tag: ${{ needs.docker-build-merge.outputs.image-tag }}
