--- a/.github/workflows/call-docker-build-promote.yaml
+++ b/.github/workflows/call-docker-build-promote.yaml
@@ -27,7 +27,7 @@ jobs:
       contents: read
       packages: write
       pull-requests: write
-    uses: mostlydevops/actions/.github/workflows/reusable-docker-build.yaml@main
+    uses: gopuman/actions/.github/workflows/reusable-docker-build.yaml@main
     with:
       # DON'T login to or push to Docker Hub
       dockerhub-enable: false
@@ -43,7 +43,7 @@ jobs:
     needs: docker-build-pr
     permissions:
       packages: read
-    uses: mostlydevops/actions/.github/workflows/reusable-trivy-scan-image.yaml@main
+    uses: gopuman/actions/.github/workflows/reusable-trivy-scan-image.yaml@main
     secrets:
       registry-username: ${{ github.actor }}
       registry-password: ${{ secrets.GITHUB_TOKEN }}
@@ -61,7 +61,7 @@ jobs:
       contents: read
       packages: write
       pull-requests: write
-    uses: mostlydevops/actions/.github/workflows/reusable-docker-build.yaml@main
+    uses: gopuman/actions/.github/workflows/reusable-docker-build.yaml@main
     with:
       dockerhub-enable: false
       ghcr-enable: true
@@ -75,11 +75,11 @@ jobs:
     name: Call GitOps PR
     if: github.event_name == 'push'
     needs: docker-build-merge
-    uses: mostlydevops/actions/.github/workflows/reusable-gitops-pr.yaml@main
+    uses: gopuman/actions/.github/workflows/reusable-gitops-pr.yaml@main
     secrets:
       github-token: ${{ secrets.GITOPS_WORDSMITH_K8S }}
     with:
-      repo: mostlydevops/wordsmith-k8s
+      repo: gopuman/wordsmith-k8s
       environment-dir: production
       image: ghcr.io/${{ github.repository }}-stable
       tag: ${{ needs.docker-build-merge.outputs.image-tag }}
